# BSplineX

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
.github/workflows/: check_release_version.yml  codeql.yml  create_release_on_tag.yml  run_cmake_inclusion_tests.yml  run_cpp_tests.yml  test_python_bindings_creation.yml
benchmarks/: CMakeLists.txt
benchmarks/bspline/: bench_bspline.cpp
bindings/: BSplineX.i
cmake/: BSplineXCatch2.cmake  BSplineXEigen3.cmake  BSplineXJSON.cmake  BSplineXVersion.cmake  version.cmake
cmake/test_cmake_inclusion/: CMakeLists.txt  test.cpp
examples/: ex_evaluate.cpp  ex_fit.cpp  ex_interpolate.cpp
include/BSplineX/: bsplinex.hpp  defines.hpp  exceptions.hpp  types.hpp  views.hpp  windows.hpp
include/BSplineX/bspline/: bspline.hpp  bspline_factory.hpp  bspline_factory_clamped.hpp  bspline_factory_open.hpp  bspline_factory_periodic.hpp  bspline_fit.hpp  bspline_interpolate.hpp  bspline_lsq.hpp  bspline_types.hpp
include/BSplineX/control_points/: c_atter.hpp  c_data.hpp  c_padder.hpp  control_points.hpp
include/BSplineX/knots/: knots.hpp  t_atter.hpp  t_data.hpp  t_extrapolator.hpp  t_finder.hpp  t_padder.hpp
tests/: .clang-tidy  CMakeLists.txt  matchers.hpp
tests/bspline/: matchers.hpp  test_bspline.cpp  test_bspline_clamped.cpp  test_bspline_open.cpp  test_bspline_periodic.cpp  test_bspline_with_data.cpp
tests/control_points/: test_c_atter.cpp  test_c_data.cpp  test_c_padder.cpp  test_control_points.cpp
tests/knots/: test_knots.cpp  test_t_atter.cpp  test_t_data.cpp  test_t_extrapolator.cpp  test_t_finder.cpp  test_t_padder.cpp
tests/views/: test_array_view.cpp
